# terraward

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  README.md  SECURITY.md  USER_MANUAL.md  advisor.py  pyproject.toml  terraward.py  test_advisor.py  test_terraward.py
.github/: dependabot.yml
.github/workflows/: security.yml  tests.yml
assets/: intro.html
docs/: AI_ADVISOR_DESIGN.md  COMMONS.md  GIVING_BACK.md  INTEGRATIONS.md  VISION.md
examples/: sample_config.json  sample_parcels.json  sample_sensors.csv
scripts/: checksums.sh
